--- a/.github/workflows/license-check.yml
+++ b/.github/workflows/license-check.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           node-version: "18.x"
 
-      - name: Set up Docker Compose
-        run: docker-compose up -d
+      - name: Install dependencies
+        run: npm install
 
-      - name: Run JavaScript license check inside container
-        run: docker-compose exec frontend node scripts/check_js_licenses.js
+      - name: Run JavaScript license check
+        run: node scripts/check_js_licenses.js
