--- a/.github/workflows/security-check.yml
+++ b/.github/workflows/security-check.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build and Tag Frontend Image
         run: |
-          docker-compose build frontend
+          docker build frontend
           docker tag ${{ env.FRONTEND_IMAGE }}:${{ env.VERSION }} ${{ env.FRONTEND_IMAGE }}:latest
 
       - name: Run Snyk to check Docker image for vulnerabilities
