--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "dotenv": "^16.4.7",
     "license-checker": "^25.0.1",
+    "octokit": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
