--- a/.github/workflows/security-check.yml
+++ b/.github/workflows/security-check.yml
@@ -8,7 +8,7 @@ on:
 
 # Environment variables used across
 env:
-  FRONTEND_IMAGE: kaleykwan/test-app-frontend
+  FRONTEND_IMAGE: frontend-image
 
 jobs:
   snyk-check:
